--- a/ExtendedCase/ExtendedCase.WebComponent/public/test.ejs
+++ b/ExtendedCase/ExtendedCase.WebComponent/public/test.ejs
@@ -97,12 +97,13 @@
         var state = {
         formParameters: {
             formId: 2, 
-            extendedCaseGuid: '595D56C0-1C21-4CC1-94FB-E8674740DB47',
+            extendedCaseGuid: '',
             userGuid: '9005F3D3-D62B-4F54-85B3-63A8EFB80782',
             languageId: 1,
             currentUser: 'admin',
             isCaseLocked: 0,
-            
+            useInitiatorAutocomplete: false,
+
             //assignment parameters:
             customerId: 1,
             userRole: 4,
