#77356 - Show selected information on Section header - fixed casetype, productarea

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.scss
@@ -55,6 +55,7 @@
         .section-info {
           font-size: xx-small;
           color: black;
+          text-transform: none;
         }
       }
      }
