--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-overview/cases-overview.component.html
@@ -66,6 +66,7 @@
                       </div>
                       <div class="mbsc-row">
                           <div class="mbsc-col">
+                              <div *ngIf="case.columns | caseHasValue: 'CustomerName'"><i class="mbsc-ic mbsc-ic-fa-star"></i>{{ (case.columns | getByKey: 'CustomerName') || '&nbsp;' }}</div>
                               <div *ngIf="case.columns | caseHasValue: 'Performer_User_Id'"><i class="mbsc-ic mbsc-ic-fa-user"></i>{{ (case.columns | getByKey: 'Performer_User_Id') || '&nbsp;' }}</div>
                               <div *ngIf="case.columns | caseHasValue: 'WorkingGroup_Id'"><i class="mbsc-ic mbsc-ic-fa-group"></i>{{ (case.columns | getByKey: 'WorkingGroup_Id') || '&nbsp;' }}</div>
                           </div>
