#77703 changed selfservice setting texts

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
@@ -202,10 +202,10 @@
                                     <td>
                                         <input type="checkbox" name="customer.UseInitiatorAutocomplete" @(Model.Customer.UseInitiatorAutocomplete ? "checked=checked" : "") value="true" />
                                         <input type="hidden" name="customer.UseInitiatorAutocomplete" value="0" />
-                                        &nbsp; &nbsp; @Translation.GetCoreTextTranslation("Använd automatiska förslag vid sökning")
+                                        &nbsp; &nbsp; @Translation.GetCoreTextTranslation("Visa förslag vid sökning")
                                         <span class="icon-info-sign ml15" rel="tooltip" 
                                                            title="" 
-                                                           data-original-title='@Translation.GetCoreTextTranslation("Om ej aktiv, hämtas endast information om anmälaren vid exakt matchning av ID").'></span>
+                                                           data-original-title='@Translation.GetCoreTextTranslation("Om ej aktiv, hämtas endast information om anmälaren vid exakt matchning av ID")'></span>
                                     </td>
                                 </tr>
                                 <tr>
