#78073 - Open attachment in mobile causes error Reverted back to mobiscroll 4.7.3 due to many errors

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-edit.component.scss
@@ -34,14 +34,25 @@
 
 ::ng-deep {
   .mbsc-select.mbsc-input {
-    /* margin:0px!important; */
+    margin:0px!important;
     input { border-bottom: 0px!important; }
   }
   /* fix for switch color and body, if fixed in new version - remove*/
   .mbsc-ios {
+    /* .mbsc-btn {
+      background: #fff;
+      color: #007bff;
+      margin: .5em .025em;
+      padding: .625em 1.375em;
+      border: 0;
+      border-radius: .25em;
+    } */
     &.mbsc-switch {
       background-color: white;
       //margin-top: 0;
+      .mbsc-label, .mbsc-desc {
+        padding-left: .5em;
+      }
       &:before, &:after {
         border-color: #ccc;
       }
