--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.scss
@@ -29,13 +29,20 @@
     }
   }
   
-  ::ng-deep .mbsc-switch .mbsc-desc { 
-    color:#000;
-    opacity:1;
-    font-size:12px!important;
-    overflow: hidden; 
-    word-break: break-all;
+  ::ng-deep { 
+    .mbsc-switch {
+      .mbsc-log-label {
+        padding-left: .5em;
+      }
+      .mbsc-desc {
+        color:#000;
+        opacity:1;
+        font-size:12px!important;
+        overflow: hidden; 
+        word-break: break-all;
+    }
   }
+}
 
   ::ng-deep .mbsc-label-stacked:before,
   ::ng-deep .mbsc-label-stacked:after
