--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/mobiscroll.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/mobiscroll.scss
@@ -1,4 +1,5 @@
 $mbsc-mobiscroll-accent: #007bff;
 $mbsc-mobiscroll-background: #f7f7f7;
 $mbsc-mobiscroll-text:  #000000;
+$mbsc-font-path: '../../../node_modules/@mobiscroll/angular/dist/css/';
 @import "../../../node_modules/@mobiscroll/angular/dist/css/mobiscroll.angular.scss"
