--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -14,7 +14,7 @@
                  [formControlName]="caseFieldsNames.Log_SendMailToNotifier"
                  (change)="onSendExternalEmailsCheckChanged()"
                  [options]="switchOptions">
-      <span [ngClass]="{'disabled': isSendMailToNotifierDisabledOrOff }">{{ 'Till' | translate }}</span>
+      <span [ngClass]="{'mbsc-log-label': true, 'disabled': isSendMailToNotifierDisabledOrOff }">{{ 'Till' | translate }}</span>
       <span class="mbsc-desc" [innerHtml]="externalLogEmailsTo | sanitize:'html'"></span>
     </mbsc-switch>
   </div>
@@ -29,7 +29,7 @@
             <mbsc-listview-item *ngFor="let file of files;" icon="fa-paperclip">{{ file }}</mbsc-listview-item>
         </mbsc-listview>
     </div>
-    <log-files-upload *ngIf="hasFullAccess" [caseKey]="caseKey" [type]="logFileType.External" (fileUploaded)="processFileUploaded($event)"></log-files-upload>
+    <log-files-upload *ngIf="hasFullAccess" [caseKey]="caseKey" [type]="logFileType.External" (fileUploaded)="processFileUploaded($event)" [customerId]="customerId"></log-files-upload>
   </ng-container>
 </ng-container>
   
