--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -187,7 +187,7 @@ span.disabled {
 mbsc-calendar {
   &.mbsc-mobiscroll {
     .mbsc-input {
-      /* margin: 0; */
+      margin: 0;
       input {
         border-bottom: inherit;
       }
