#77716 Remove configuration option for Regarding in Self Service

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerCaseFieldSettings/_Input.cshtml
@@ -726,7 +726,7 @@
                             <input type="hidden" name="CaseFieldSettings[74].Hide" value="false" />
                         </td>
                         <td>
-                            <input type="checkbox" name="CaseFieldSettings[74].ShowExternal" disabled="disabled" />
+                            @*<input type="checkbox" name="CaseFieldSettings[74].ShowExternal" disabled="disabled" />*@
                             <input type="hidden" name="CaseFieldSettings[74].ShowExternal" value="0" />
                         </td>
                         <td>
@@ -769,7 +769,7 @@
                         </td>
                         <td></td>
                         <td>
-                            <input type="checkbox" name="CaseFieldSettings[59].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_ReportedBy.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                            @*<input type="checkbox" name="CaseFieldSettings[59].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_ReportedBy.ToString()) == 1 ? "checked=checked" : "") value="1" />*@
                             <input type="hidden" name="CaseFieldSettings[59].ShowExternal" value="0" />
                         </td>
                         <td>
@@ -809,7 +809,7 @@
                         </td>
                         <td></td>
                         <td>
-                            <input type="checkbox" name="CaseFieldSettings[60].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_Persons_Name.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                            @*<input type="checkbox" name="CaseFieldSettings[60].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_Persons_Name.ToString()) == 1 ? "checked=checked" : "") value="1" />*@
                             <input type="hidden" name="CaseFieldSettings[60].ShowExternal" value="@Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_Persons_Name.ToString())" />
                         </td>
                         <td>
@@ -849,7 +849,7 @@
                         </td>
                         <td></td>
                         <td>
-                            <input type="checkbox" name="CaseFieldSettings[61].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_Persons_EMail.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                            @*<input type="checkbox" name="CaseFieldSettings[61].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_Persons_EMail.ToString()) == 1 ? "checked=checked" : "") value="1" />*@
                             <input type="hidden" name="CaseFieldSettings[61].ShowExternal" value="0" />
                         </td>
                         <td>
@@ -891,7 +891,7 @@
                         </td>
                         <td></td>
                         <td>
-                            <input type="checkbox" name="CaseFieldSettings[62].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_Persons_Phone.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                            @*<input type="checkbox" name="CaseFieldSettings[62].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_Persons_Phone.ToString()) == 1 ? "checked=checked" : "") value="1" />*@
                             <input type="hidden" name="CaseFieldSettings[62].ShowExternal" value="0" />
                         </td>
                         <td>
@@ -933,7 +933,7 @@
                         </td>
                         <td></td>
                         <td>
-                            <input type="checkbox" name="CaseFieldSettings[63].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_Persons_CellPhone.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                            @*<input type="checkbox" name="CaseFieldSettings[63].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_Persons_CellPhone.ToString()) == 1 ? "checked=checked" : "") value="1" />*@
                             <input type="hidden" name="CaseFieldSettings[63].ShowExternal" value="0" />
                         </td>
                         <td>
@@ -973,7 +973,7 @@
                         </td>
                         <td></td>
                         <td>
-                            <input type="checkbox" name="CaseFieldSettings[64].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_Region_Id.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                            @*<input type="checkbox" name="CaseFieldSettings[64].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_Region_Id.ToString()) == 1 ? "checked=checked" : "") value="1" />*@
                             <input type="hidden" name="CaseFieldSettings[64].ShowExternal" value="0" />
                         </td>
                         <td>
@@ -1013,7 +1013,7 @@
                         </td>
                         <td></td>
                         <td>
-                            <input type="checkbox" name="CaseFieldSettings[65].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_Department_Id.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                            @*<input type="checkbox" name="CaseFieldSettings[65].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_Department_Id.ToString()) == 1 ? "checked=checked" : "") value="1" />*@
                             <input type="hidden" name="CaseFieldSettings[65].ShowExternal" value="0" />
                         </td>
                         <td>
@@ -1055,7 +1055,7 @@
                         </td>
                         <td></td>
                         <td>
-                            <input type="checkbox" name="CaseFieldSettings[66].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_OU_Id.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                            @*<input type="checkbox" name="CaseFieldSettings[66].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_OU_Id.ToString()) == 1 ? "checked=checked" : "") value="1" />*@
                             <input type="hidden" name="CaseFieldSettings[66].ShowExternal" value="0" />
                         </td>
                         <td>
@@ -1097,7 +1097,7 @@
                         </td>
                         <td></td>
                         <td>
-                            <input type="checkbox" name="CaseFieldSettings[67].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_CostCentre.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                            @*<input type="checkbox" name="CaseFieldSettings[67].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_CostCentre.ToString()) == 1 ? "checked=checked" : "") value="1" />*@
                             <input type="hidden" name="CaseFieldSettings[67].ShowExternal" value="0" />
                         </td>
                         <td>
@@ -1139,7 +1139,7 @@
                         </td>
                         <td></td>
                         <td>
-                            <input type="checkbox" name="CaseFieldSettings[68].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_Place.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                            @*<input type="checkbox" name="CaseFieldSettings[68].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_Place.ToString()) == 1 ? "checked=checked" : "") value="1" />*@
                             <input type="hidden" name="CaseFieldSettings[68].ShowExternal" value="0" />
                         </td>
                         <td>
@@ -1181,7 +1181,7 @@
                         </td>
                         <td></td>
                         <td>
-                            <input type="checkbox" name="CaseFieldSettings[69].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_UserCode.ToString()) == 1 ? "checked=checked" : "") value="1" />
+                            @*<input type="checkbox" name="CaseFieldSettings[69].ShowExternal" @(Model.CaseFieldSettings.getShowExternal(GlobalEnums.TranslationCaseFields.IsAbout_UserCode.ToString()) == 1 ? "checked=checked" : "") value="1" />*@
                             <input type="hidden" name="CaseFieldSettings[69].ShowExternal" value="0" />
                         </td>
                         <td>
